Added mirror image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </section>
     <main class="wrapper">
       <section class="display"></section>
+      <section class="mirror"></section>
     </main>
     <script src="script.js"></script>
   </body>
