--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Letters randomiser</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Major+Mono+Display&display=swap" rel="stylesheet">
   </head>
   <body>
       <section>
-        <input type="text" name="words" />
-        <button name="randomise">Go!</button>
+        <input type="text" name="words" placeholder="Enter..." />
+        <button name="randomise" disabled>Go!</button>
       </section>
     <main class="wrapper">
-      <section class="display"></section>
-      <section class="mirror"></section>
+      <section class="letters normal"></section>
+      <section class="letters mirrored"></section>
     </main>
     <script src="script.js"></script>
   </body>
