--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
       <section>
-        <input type="text" name="words" placeholder="Enter..." />
+        <input type="text" name="words" placeholder="Enter..." maxlength="30" />
         <button name="randomise" disabled>Go!</button>
       </section>
     <main class="wrapper">
