--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3>Enter words to randomise</h3>
         <div class="m-t-10">
           <input type="text" name="words" placeholder="Max: 20 characters" maxlength="20" />
-          <button name="randomise"  disabled>Go!</button>
+          <button name="randomise" disabled>Go!</button>
         </div>
       </section>
       <section class="align-center m-t-20">
@@ -37,6 +37,9 @@
       <section class="letters normal"></section>
       <section class="letters mirrored"></section>
     </div>
+
+    <script src="https://cdn.rawgit.com/khalidsalomao/simple-query-string/22cc5bbe/src/simplequerystring.min.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
