--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   </head>
   <body>
     <div class="align-center">
@@ -37,6 +38,7 @@
       <section class="letters normal"></section>
       <section class="letters mirrored"></section>
     </div>
+    <footer>&copy; Roland Levy 2021 <a href="https://rolandlevy.co.uk" class="new-tab-icon" target="_blank">see more of my projects</a></footer>
 
     <script src="https://cdn.rawgit.com/khalidsalomao/simple-query-string/22cc5bbe/src/simplequerystring.min.js"></script>
 
