--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <section class="letters normal"></section>
       <section class="letters mirrored"></section>
     </div>
-    <footer>&copy; Roland Levy 2021 <a href="https://rolandlevy.co.uk" class="new-tab-icon" target="_blank">see more of my projects</a></footer>
+    <footer>&copy; Roland Levy <span id="year"></span> <a href="https://rolandlevy.co.uk" class="new-tab-icon" target="_blank">see more of my projects</a></footer>
 
     <script src="https://cdn.rawgit.com/khalidsalomao/simple-query-string/22cc5bbe/src/simplequerystring.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
